#201 fix margin on mobile

--- a/src/assets/styles/responsive.scss
+++ b/src/assets/styles/responsive.scss
@@ -111,9 +111,6 @@ File: scss
   h1.stat-value {
     font-size: 20px;
   }
-  h1.page-title {
-    margin-top: 2.5em;
-  }
   html .page-wrapper {
     .page-content {
       padding: 0;
